# rust-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-client.yaml  docker-compose-server.yaml  entrypoint.sh
src/: error.rs  lib.rs  main.rs  socks5.rs
src/client/: README.md  client.rs  mod.rs
src/codec/: codec.rs  mod.rs  packet.rs  socks5.rs
src/pool/: make_connection.rs  make_transport.rs  mod.rs  pool.rs  started.rs
src/server/: README.md  mod.rs  server.rs
src/transport/: mod.rs
src/util/: copy.rs  mod.rs  ssl.rs  websocket_connection.rs
