[package]
name = "ss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = ["full"] }
futures = "0"
tokio-socks = "0.5.1"
thiserror = "1"
structopt = { version = "0.3", default-features = false }
tokio-tungstenite = { version = "*", features = ["rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
tungstenite = { version = "*", default-features = false }
url = "2"
bytes = "1.0.1"
rustls-pemfile = "*"
tokio-rustls = "*"
rustls = "*"
log = "0.4.0"
env_logger = "*"
http = "*"

[[bin]]
name = "ss"
path = "src/bin/main.rs"