[package]
name = "ss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-socks = "*"
tokio-rustls = "*"
tokio-util = { version = "*", features = ["codec"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls"] }

futures = "0"
futures-core = "*"
futures-sink = "0.3.15"
futures-util = "*"
futures-channel = "0.3"

thiserror = "1"
structopt = { version = "0.3", default-features = false }
url = "2"
bytes = "1.0.1"
rustls-pemfile = "*"
rustls = "*"
log = "0.4.0"
env_logger = "*"
http = "*"
anyhow = "*"
tower = { version = "*", features = ["full"] }
byteorder = "1"
pin-project = "*"

[[bin]]
name = "ss"
path = "src/bin/main.rs"